Keep the 1.20.1 branch building on Java 17
The branch targets Minecraft 1.20.1, whose build is compiled with Java 17. A few APIs had drifted toward newer client versions, and the default local/CI build path still encouraged Java 21, which caused Gradle to attempt a toolchain download during verification.

This keeps the ParaTranz config screen and bilingual tooltip mixins on the 1.20.1 method surface, removes a Java 21-only List helper from unit checks, and makes the Java 17 wrapper point at the local toolchain while disabling automatic toolchain downloads.

Constraint: Minecraft 1.20.1 branch uses Java 17 and Fabric API 0.92.9+1.20.1

Rejected: Keep building through gradlew-java21.bat | Gradle then tries to provision Java 17 and can stall on Foojay downloads

Confidence: high

Scope-risk: narrow

Directive: Keep this branch's documented build path on gradlew-java17.bat unless the Minecraft target changes

Tested: git diff --check; .\\gradlew-java17.bat build --stacktrace --console=plain

Not-tested: Minecraft client runtime/manual UI checks